[project]
name = "flow-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "torchcfm>=1.0.7",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "7f70b78f3221a2fa64ae09795b5989a58a61931d" }
